# polkadot-native-storage

./: .gitignore  Cargo.toml  Dockerfile  README.md
doc/: testing_guide.md
doc/report/: .gitignore  .markdownlint.yaml  README.md  book.toml
doc/report/assets/: arch_substrate.drawio  polkadot-storage-arch.drawio  read_file.drawio
doc/report/src/: SUMMARY.md  new-conclusion.md  new-overview.md  new-scenarios.md  new-solution.md
node/: Cargo.toml
node/src/: chain_spec.rs  cli.rs  command.rs  rpc.rs  service.rs
pallets/collator-selection-power/: Cargo.toml
pallets/collator-selection-power/src/: benchmarking.rs  lib.rs  mock.rs  weights.rs
pallets/miner/: Cargo.toml  README.md
pallets/miner/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs
pallets/pns/: Cargo.toml  README.md
pallets/pns-common/: Cargo.toml  README.md
pallets/pns-common/src/: lib.rs  registered_proof.rs
pallets/pns-common/src/address/: errors.rs  mod.rs  network.rs  payload.rs  protocol.rs
pallets/pns/rpc/: Cargo.toml
pallets/pns/rpc/runtime-api/: Cargo.toml
pallets/pns/rpc/runtime-api/src/: lib.rs
pallets/pns/rpc/src/: lib.rs
pallets/pns/src/: benchmarking.rs  lib.rs  mock.rs
pallets/power/: Cargo.toml  README.md
pallets/power/src/: lib.rs  mock.rs
polkadot-launch/spec/: plain-parachain-chainspec.json  raw-parachain-chainspec.json
runtime/: Cargo.toml
runtime/src/: lib.rs
scripts/: run_nodes.sh
